Test Org - Speridian/src/objects/BA_Appeal__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Appeals Process</fullName>
                </value>
                <value>
                    <fullName>CMS Issues</fullName>
                </value>
                <value>
                    <fullName>Privacy</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Plan Benefits</fullName>
                </value>
                <value>
                    <fullName>Quality Of Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_AppealAcknowledgedDate__c</fullName>
        <label>Appeal Acknowledged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_AppealLevel__c</fullName>
        <label>Appeal Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_AppealMDReviewer__c</fullName>
        <label>Appeal MD Reviewer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_AppealReceivedDate__c</fullName>
        <label>Appeal Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_AppealType__c</fullName>
        <label>Appeal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Contractual</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Grievance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_AssignedReviewer__c</fullName>
        <label>Assigned Reviewer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_AuthorizationNumber__c</fullName>
        <label>Authorization Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_ClaimsAdjudicatedDate__c</fullName>
        <label>Claims Adjudicated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_DecisionDate__c</fullName>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Decision__c</fullName>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uphold</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Issue Identified</fullName>
                </value>
                <value>
                    <fullName>Dismissed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_DiagnosisCode__c</fullName>
        <label>Diagnosis Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Drug__c</fullName>
        <label>Drug</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_ExpeditedStatus__c</fullName>
        <label>Expedited Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Granted</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_ExpeditedVerbalNotification__c</fullName>
        <label>Expedited Verbal Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_ExpeditedWrittenNotification__c</fullName>
        <label>Expedited Written Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_IRECaseNumber__c</fullName>
        <label>IRE Case Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_InitialMDReviewer__c</fullName>
        <label>Initial MD Reviewer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_MemberNotified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_PrescriptionProvided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescription Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_ProviderID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appeals</relationshipLabel>
        <relationshipName>Appeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_ProviderName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appeals (Provider Name)</relationshipLabel>
        <relationshipName>Appeals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Resolution__c</fullName>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ba_TimeframeExtended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timeframe Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_VerbalNotificationDate__c</fullName>
        <label>Verbal Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_WrittenNotificationDate__c</fullName>
        <label>Written Notification Date</label>
        <type>Date</type>
    </fields>
    <label>Appeal</label>
    <nameField>
        <displayFormat>APID-{0000}</displayFormat>
        <label>Appeal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appeals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>